css/styles.scss
/* ... */
html {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

body {
  font-family: 'Inter', Helvetica, Arial, sans-serif;
}

#app {
  height: 100%;
  left: 0;
  margin: 0;
  padding: $topbar-height 2ex 0 2ex;
  position: absolute;
  top: 0;
  width: 100%;
}

h1 {
  font-size: 180%;
  font-weight: 400;
  text-align: center;
}

h2 {
  font-size: 120%;
  font-weight: 300;
  margin: 0.5ex;
}

h1, h2 {
  text-align: center;
}

/* This is the name of the current disease */
#sidebar h1 {
  border: 1px solid #ccc;
  border-radius: 5px;
  display: inline-block;
  font-size: 16px;
  margin: 0;
  padding: 0.5ex 1ex;
}

/* Completeness text view */

body.completeness #app table {
  margin: 2ex auto 0 auto;
}

/* Map views */

body.casemap #app,
body.historicalmap #app,
body.completeness #app,
body.coverage #app,
body.cumulative #app,
body.freshness #app {
  /* For the map, occupy the whole viewport. */
  margin: 0;
  padding: 0;
}

/* Rank view */

body.rank {
  overflow: hidden;
}

body.rank .toggles {
  text-align: center;
}

body.rank .inview-toggle {
  border: 1px solid rgba(0, 0, 0, 0.5);
  border-radius: 5px;
  display: inline-block;
  margin: 2ex 4ex;
  text-align: center;
}

body.rank .inview-toggle div {
  cursor: pointer;
  display: inline-block;
  padding: 10px;
  min-width: 10ex;
}

body.rank .inview-toggle div.active {
  color: white;
  background: $accent-color;
}

body.rank #rank_content {
  display: block;
  height: 100%;
  left: 5%;
  position: absolute;
  right: 5%;
  width: 90%;
}

body.rank .bar {
  border: 1px solid black;
  border-radius: 10px;
  height: 30px;
  line-height: 20px;
  overflow: hidden;
  padding: 3px 10px;
  position: absolute;
  transition: top 0.2s, width 0.2s;
  white-space: nowrap;
  word-wrap: unset;
}

body.rank .bar .start {
      display: inline-block;
      left: 5px;
      position: absolute;
    }

body.rank .bar .end {
  position: absolute;
  right: 5px;
}

body.rank #minimap {
  background:
  url('https://raw.githubusercontent.com/ghdsi/common/master/worldmap.png');
  bottom: 0;
  height: 130px;
  position: absolute;
  right: 0;
  width: 198px;
}

/* Sync view */

body.sync h2 {
  margin: 2ex 0;
}

body.sync #filters {
  margin: 2ex 0;
  text-align: center;
}

a, a:visited {
  color: #666;
  transition: all .3s ease;
}

a:focus, a:hover, a:active {
  color: #999;
}

.list-reset {
  list-style: none;
  margin: 0;
  padding: 0;
}

button {
  text-decoration: none;
  cursor: pointer;
  user-select: none;
  background-color: transparent;
  transition: all .3s ease;
  &:hover, &:focus, &.focus {
    background-image: none;
    outline: 0;
    text-decoration: none;
  }
  &:active,
  &.is-active {
    background-image: none;
    outline: 0;
  }
}

input[type=text] {
  width: 100%;
  padding: .5rem 1rem;
  font-size: .9rem;
  border: 1px solid #666;
  border-radius: $box-corner;
  &::-ms-expand {
    background-color: transparent;
    border: 0;
  }
  &::-ms-clear {
    display: none;
  }
  &::placeholder {
    color: #ababab;
    // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
    opacity: 1;
  }
  &:focus {
    &::-webkit-input-placeholder {
      color: transparent;
    }
    &::-moz-input-placeholder {
      color: transparent;
    }
    &::placeholder {
      color: transparent;
    }
  }
}

#topbar-container {
  display: flex;
  justify-content: space-around;
  position: fixed;
  top: 2ex;
  width: 100%;
  z-index: 9;
}

#topbar {
  display: flex;
  flex-direction: row;
  font-size: 90%;
  justify-content: space-between;
  margin: 0 0 0 auto;
  padding: 0 1ex;
}

.fullscreen #topbar,
.fullscreen #sidebar,
.fullscreen .mapboxgl-control-container {
  display: none;
}

#topbar div {
  cursor: pointer;
  flex-grow: 1;
  text-align: center;
}

#topbar .navlink {
  border-top: 4px solid transparent;
  border-bottom: 4px solid transparent;
  margin: 0;
  padding: 1.5ex 2ex;
}

#settings-menu {
  padding: 3ex;
  position: fixed;
  right: 0;
  z-index: 10;
}

#sidebar {
  backdrop-filter: blur(.5rem);
  background-color: $sidebar-bgcolor-dark;
  border-radius: $card-border-radius;
  bottom: 25%;
  box-shadow: $card-box-shadow;
  color: #aaa;
  display: flex;
  flex-direction: column;
  height: 70%;
  left: 2ex;
  padding: 2ex;
  position: fixed;
  margin-top: 0;
  top: 15%;
  transition: left 0.2s;
  width: $sidebar-width;
  z-index: 3;
}

.sidebar-hidden #sidebar {
  left: -$sidebar-width;
}

#sidebar-tab {
  align-items: center;
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  height: 5ex;
  left: 100%;
  position: absolute;
  top: 5ex;
  width: 2.5ex;
}

#sidebar-tab-icon {
  font-size: 80%;
}

#sidebar #latest-global {
  margin: 2ex 0;
}

#sidebar #ghlist {
  background: #edf3f1;
  border-radius: 1ex;
  color: #575c5f;
  cursor: pointer;
  height: 5ex;
  margin-top: 2ex;
  padding: 1ex 0;
  text-align: center;
}

#sidebar #ghlist img {
  border-right: 1px solid #555;
  height: 3ex;
  margin-left: 3ex;
  margin-right: 0.6ex;
  object-fit: contain;
  padding-right: 0.6ex;
  vertical-align: middle;
}

#sidebar #ghlist span {
  color: #137564;
  font-size: 3ex;
  vertical-align: middle;
}

#logo {
  height: 6ex;
  left: 2ex;
  position: fixed;
  top: 2ex;
  z-index: 5;
}

#logo img {
  border-right: 1px solid #555;
  margin-right: 0.6ex;
  padding-right: 0.6ex;
  object-fit: contain;
  vertical-align: middle;
  width: 5ex;
}

#logo span {
  color: $accent-color;
  font-size: 5ex;
  vertical-align: middle;
}

.reported-cases {
  justify-content: center;
  margin-bottom: .25rem;
  padding: .25rem 0 .5rem 0;
  color: #fff;
  border-radius: $box-corner;
  transition: all .3s ease;
  cursor: pointer;
  &:focus, &:hover, &:active, &.is-active {
    background-color: #454545;
  }
}

#total-cases, #total-deaths {
  color: black;
  font-size: 1.7rem;
  font-weight: 500;
  margin-right: 0.35ex;
}
/* ... */

